# ads-boost

./: .dockerignore  .env  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/src/: ads-boost.cpp  adsb_message.cpp  adsb_message.h  adsb_message_test.cpp  config.h  contact.cpp  contact.h  contact_test.cpp  demodulator.cpp  demodulator.h  demodulator_test.cpp  sdr_handler.cpp  sdr_handler.h  webserver.cpp  webserver.h
backend/test/: test.cpp
frontend/: Dockerfile  nginx.conf
frontend/app/: .env.development.local  .env.production.local  package.json
frontend/app/public/: index.html  manifest.json
frontend/app/src/: App.js  aircraft.js  contact_table.js  custom.scss  index.js  osm_contacts_map.js  rotated_marker.js  settings_modal.js
kubernetes/: backend-configmap.yaml  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  pvc.yaml
